# otel-logging-framework

./: .gitignore  MANIFEST.in  README.md  async_docs.md  logger_config.yaml  pyproject.toml  requirements.txt
otel_logger/: __init__.py  otel_logger.py  otel_types.py
otel_logger/handlers/: __init__.py  debug.py  elasticsearch.py  filesystem.py  postgres.py
tests/: performance_test.py  test_otel.py
